// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue:stories for applications should create the stories with interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import NxWelcome from './NxWelcome.vue';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof NxWelcome> = {
  component: NxWelcome,
  title: 'NxWelcome',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
};

export const Heading: Story = {
  args: {},
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    await expect(canvas.getByText(/Welcome to NxWelcome!/gi)).toBeTruthy();
  },
};
"
`;

exports[`vue:stories for applications should create the stories with interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import anotherCmp from './another-cmp.vue';

import { within } from '@storybook/testing-library';
import { expect } from '@storybook/jest';

const meta: Meta<typeof anotherCmp> = {
  component: anotherCmp,
  title: 'anotherCmp',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
};

export const Heading: Story = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
  play: async ({ canvasElement }) => {
    const canvas = within(canvasElement);
    await expect(canvas.getByText(/Welcome to anotherCmp!/gi)).toBeTruthy();
  },
};
"
`;

exports[`vue:stories for applications should create the stories without interaction tests 1`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import NxWelcome from './NxWelcome.vue';

const meta: Meta<typeof NxWelcome> = {
  component: NxWelcome,
  title: 'NxWelcome',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {},
};
"
`;

exports[`vue:stories for applications should create the stories without interaction tests 2`] = `
"import type { Meta, StoryObj } from '@storybook/vue3';
import anotherCmp from './another-cmp.vue';

const meta: Meta<typeof anotherCmp> = {
  component: anotherCmp,
  title: 'anotherCmp',
};
export default meta;
type Story = StoryObj<typeof meta>;

export const Primary = {
  args: {
    name: 'name',
    displayAge: false,
    age: 0,
  },
};
"
`;

exports[`vue:stories for applications should not update existing stories 1`] = `
"import { ComponentStory, ComponentMeta } from '@storybook/vue3';
"
`;
